<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jacpreview</name>
  <version>0.1.0</version>
  <description>A web-based real-time Jacobian matrix visualization tool using ROS 2 Bridge and Next.js</description>
  <maintainer email="valeriy.novytskyy@outlook.com">01binary</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 